--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
           </ul>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/portfolio/website.jpg" alt="Веб-сайт" width="370" height="294" />
                 <div class="card">
                   <h2 class="portfolio-title">Технокряк</h2>
@@ -76,7 +76,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img
                   src="./images/portfolio/poster-no-vs-gs.jpg"
                   alt="Два баскетболиста"
@@ -89,7 +89,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img
                   src="./images/portfolio/seatood.jpg"
                   alt="Логотип ресторана"
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img
                   src="./images/portfolio/headphone.jpg"
                   alt="Наушники"
@@ -117,7 +117,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/portfolio/boxes.jpg" alt="Коробки" width="370" height="294" />
                 <div class="card">
                   <h2 class="portfolio-title">Проект Boxes</h2>
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img
                   src="./images/portfolio/pc.jpg"
                   alt="Настольный комп'ютер"
@@ -140,7 +140,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/portfolio/book.jpg" alt="Книга" width="370" height="294" />
                 <div class="card">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/portfolio/label.jpg" alt="Бирка" width="370" height="294" />
                 <div class="card">
                   <h2 class="portfolio-title">Проект LAB</h2>
@@ -158,7 +158,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="filter-link" href="">
+              <a class="portfolio-link" href="">
                 <img src="./images/portfolio/laptop.jpg" alt="Ноутбук" width="370" height="294" />
                 <div class="card">
                   <h2 class="portfolio-title">Growing Business</h2>
