--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
       </section>
       <section class="clients section">
         <div class="container">
-          <h2>Постоянные клиенты</h2>
+          <!-- клиенты -->
+          <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="clients-item">
               <a class="clients-link" href="" target="_blank" rel="noreferrer noopener">
