--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="feature-list">
             <li class="feature-item">
               <div class="featnre-rectangle">
-                <svg class="contact-icon" width="70px" height="70px">
+                <svg class="feature-icon" width="70px" height="70px">
                   <use href="./images/svg/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -78,7 +78,7 @@
             </li>
             <li class="feature-item">
               <div class="featnre-rectangle">
-                <svg class="contact-icon" width="70px" height="70px">
+                <svg class="feature-icon" width="70px" height="70px">
                   <use href="./images/svg/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -89,7 +89,7 @@
             </li>
             <li class="feature-item">
               <div class="featnre-rectangle">
-                <svg class="contact-icon" width="70px" height="70px">
+                <svg class="feature-icon" width="70px" height="70px">
                   <use href="./images/svg/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -100,7 +100,7 @@
             </li>
             <li class="feature-item">
               <div class="featnre-rectangle">
-                <svg class="contact-icon" width="70px" height="70px">
+                <svg class="feature-icon" width="70px" height="70px">
                   <use href="./images/svg/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
